--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h3>This is a test page</h3>
+    <div>Version 2</div>
+    {% for todo in todo_list %}
+        <h3>{{ todo.text }} - {{ todo.created_at }}</h3>
+    {% endfor %}
+
 </body>
 </html>
