added todo deletion

--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -45,7 +45,7 @@
                     <div class = "action_buttons">
                         <img src = "{% static './icons/unmarked.png' %}" />
                         
-                        <img src = "{% static './icons/delete.png' %}" />
+                        <a href="{% url 'delete-todo' todo.id %}"><img src = "{% static './icons/delete.png' %}"/></a>
                     </div>                     
                 </div>
             </div>
