added book_details.html and a new function which redirects to this html from books.html

--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -35,6 +35,8 @@
             <div class="todo_item
                 {% if todo.is_favorite %}
                     marked
+                {% elif todo.is_favorite == False %}
+                    todo_item
                 {% endif %}
             ">
                 <div class = "todo_item_header">
@@ -50,7 +52,7 @@
                         {% if todo.is_favorite %}
                             <a href="{% url 'mark-todo' todo.id %}"><img src = "{% static './icons/marked.png' %}" /></a>
                         {% else %}
-                            <a href="{% url 'mark-todo' todo.id %}"><img src = "{% static './icons/unmarked.png' %}" /></a>
+                            <a href="{% url 'unmark-todo' todo.id %}"><img src = "{% static './icons/unmarked.png' %}" /></a>
                         {% endif %}
 
 
