--- a/main/templates/book_details.html
+++ b/main/templates/book_details.html
@@ -34,7 +34,7 @@
                     placeholder="Write here the subtitle"
                     name="book_subtitle"
                 />
-                <!-- <input
+                <input
                 class = "create_input"
                 type = "text" 
                 placeholder="Write here the description"
@@ -66,7 +66,7 @@
                     type = "text" 
                     placeholder="Write here the book price"
                     name="book_price"
-                /> -->
+                />
                 <button class = 'create_button'>Add</button>
             </form>
         </div>
@@ -78,13 +78,12 @@
                     {% endif %}
                 ">
                     <div class = "todo_item_header">
-                        <h3>{{ book.name }} - {{ book.title }} - {{ book.subtitle }}
+                        <h3>{{ book.name }} - {{ book.title }} - {{ book.subtitle }} - {{ book.description }} - {{ book.cost }} - {{ book.genre }} - {{ book.author }} - {{ book.year }}
                         </h3> 
                     </div>
                     <div class = "todo_item_footer">
                         
                         <div class = "action_buttons">
-                            
                             {% if book.is_favorite %}
                                 <a href="{% url 'mark-book' book.id %}"><img src = "{% static './icons/marked.png' %}" /></a>
                             {% else %}
@@ -92,7 +91,7 @@
                             {% endif %}
 
                             <a href="{% url 'delete-book' book.id %}"><img src = "{% static './icons/delete.png' %}"/></a>
-                            <a href="{% url 'details-book' book.id %}"><img src = "{% static './icons/moreinfo.jpg' %}"/></a>
+                            
                         </div>                     
                     </div>
                 </div>
